Upgrade to sbt 1.1.0